[package]
name         = "kameo-testing"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/kameo-testing"
description  = "Kameo 0.20 testing bed and source for the workspace's Kameo skill."
publish      = false

[lib]
name = "kameo_testing"
path = "src/lib.rs"

[dependencies]
kameo   = { version = "0.20", features = ["macros"] }
tokio   = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[lints.rust]
unsafe_code = "forbid"
unused      = "warn"
dead_code   = "warn"
